--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
                                             <h3>Estilos</h3>
                                             <p>Color. <br>
                                                 El color es un elemento muy importante de la comunicación visual, por ello, es necesario hacer un uso inteligente e intencional del mismo. A la hora de crear sistemas de diseño distinguimos los siguientes tipos de colores: **</p>
-                                            <div class="in_list">
+                                            <!-- <div class="in_list">
                                                 <ul>
                                                     <li>
                                                         <p>Email is a crucial channel in any marketing.</p>
@@ -535,12 +535,12 @@
                                                         <p>Habitasse per feugiat aliquam luctus accumsan curae</p>
                                                     </li>
                                                 </ul>
-                                            </div>
-                                            <p>Streets empty that are usually busy are remarkable and can evoke the
+                                            </div> -->
+                                            <!-- <p>Streets empty that are usually busy are remarkable and can evoke the
                                                 sense of historical pictures from before the invention of the motorcar.
                                                 Other things that are different at the moment will be queues to get into
                                                 stores and the lines marked out on the floor to show how far apart we
-                                                should be.</p>
+                                                should be.</p> -->
                                         </div>
                                     </div>
                                 </div>
@@ -562,7 +562,7 @@
                                             <img src="img/thumb4-3.jpg" alt="" />
                                             <div class="main" data-img-url="img/blogs/2.jpg"></div>
                                         </div>
-                                        <div class="description">
+                                        <!-- <div class="description">
                                             <h3>Learn About Wireframes Before Hiring a Web Developer</h3>
                                             <p>Just because we can't get out and about like we normally would, doesn’t
                                                 mean we have to taking pictures. There’s still plenty you can do,
@@ -597,7 +597,7 @@
                                                 Other things that are different at the moment will be queues to get into
                                                 stores and the lines marked out on the floor to show how far apart we
                                                 should be.</p>
-                                        </div>
+                                        </div> -->
                                     </div>
                                 </div>
                                 <div class="item modal_item" data-index="3">
@@ -618,7 +618,7 @@
                                             <img src="img/thumb4-3.jpg" alt="" />
                                             <div class="main" data-img-url="img/blogs/3.jpg"></div>
                                         </div>
-                                        <div class="description">
+                                        <!-- <div class="description">
                                             <h3>7 Ways to Optimize Your WordPress Website</h3>
                                             <p>Just because we can't get out and about like we normally would, doesn’t
                                                 mean we have to taking pictures. There’s still plenty you can do,
@@ -653,7 +653,7 @@
                                                 Other things that are different at the moment will be queues to get into
                                                 stores and the lines marked out on the floor to show how far apart we
                                                 should be.</p>
-                                        </div>
+                                        </div> -->
                                     </div>
                                 </div>
                                 <div class="item modal_item" data-index="4">
@@ -674,7 +674,7 @@
                                             <img src="img/thumb4-3.jpg" alt="" />
                                             <div class="main" data-img-url="img/blogs/4.jpg"></div>
                                         </div>
-                                        <div class="description">
+                                        <!-- <div class="description">
                                             <h3>Don't Build Your App for 100 Million Users</h3>
                                             <p>Just because we can't get out and about like we normally would, doesn’t
                                                 mean we have to taking pictures. There’s still plenty you can do,
@@ -711,7 +711,7 @@
                                                 stores and the lines marked out on the floor to show how far apart we
                                                 should be.
                                             </p>
-                                        </div>
+                                        </div> -->
                                     </div>
                                 </div>
                                 <div class="item modal_item" data-index="5">
@@ -737,11 +737,7 @@
                                             <p>Crear una app para que el vendedor del socio registre todas ventas realizadas en la consola de paguitos móvil, para un control del pago de comisiones generadas de manera semanal.</p>
                                             <h3>Alcance general</h3>
                                             <p>Tener una app personalizada para tener un registro de ventas realizadas por integrantes para recibir su comisión por cada venta registrada.</p>
-                                            <p>Streets empty that are usually busy are remarkable and can evoke the
-                                                sense of historical pictures from before the invention of the motorcar.
-                                                Other things that are different at the moment will be queues to get into
-                                                stores and the lines marked out on the floor to show how far apart we
-                                                should be.</p>
+                                            
                                         </div>
                                     </div>
                                 </div>
