--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                     <!-- Content comes from JS -->
                 </div>
                 <div class="edrea_prevnext" data-index="" data-from="">
-                    <div class="next"><a href="#">Next</a></div>
-                    <div class="prev"><a href="#">Prev</a></div>
+                    <div class="next"><a href="#">Siguiente</a></div>
+                    <div class="prev"><a href="#">Anterior</a></div>
                 </div>
             </div>
         </div>
@@ -413,6 +413,18 @@
                                                 <span class="image" data-img-url="img/portfolio/macro-logo.png"></span>
                                                 <h3>Carmen Angelica Can Chable</h3>
                                                 <p>Gerente Mobile</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="item">
+                                        <div class="item_in">
+                                            <div class="description">
+                                                <p>Excelente trabajo en equipo, se adapta y se trabaja cada detalle de acuerdo a las necesidades de la operacion</p>
+                                            </div>
+                                            <div class="title">
+                                                <span class="image" data-img-url="img/portfolio/macro-logo.png"></span>
+                                                <h3>Jessica Maria Xeque Barrera</h3>
+                                                <p>Coordinador de Compensaciones y Beneficios</p>
                                             </div>
                                         </div>
                                     </div>
