--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
                             <h3 class="title">Proyectos realizados <br> <span>desde casa</span></h3>
                         </div>
                         <div class="edrea_news_slider">
-                            <div class="owl-carousel modal_items" data-from="news" data-count="5">
+                            <div class="owl-carousel modal_items" data-from="Portafolio" data-count="5">
                                 <div class="item modal_item" data-index="1">
                                     <div class="image">
                                         <img src="img/thumb63-43.jpg" alt="" />
@@ -519,10 +519,12 @@
                                     </div>
                                     <div class="hidden_information">
                                         <div class="image">
-                                            <img src="img/thumb4-3.jpg" alt="" />
-                                            <div class="main" data-img-url="img/portfolio/sistema-diseno-pm.jpg"></div>
+                                            <img src="img/portfolio/pm-folio01.jpg" alt="" />
+                                            <div class="main" data-img-url="img/portfolio/pm-folio01.jpg"></div>
                                         </div>
                                         <div class="description">
+                                            <h2>Sistema de Diseño / Paguitos Móvil</h2>
+                                            <br>
                                             <h3>¿Qué valor aporta?</h3>
                                             <p>
                                                 Utilizar un sistema de diseño garantiza la consistencia de nuestros productos. Esto repercute de manera positiva en la experiencia del usuario y acorta significativamente los tiempos de ideación, desarrollo y elaboración de productos. Por otra parte, los sistemas de diseño son una herramienta especialmente útil para conseguir crear productos digitales capaces de escalar y crecer rápidamente de una forma controlada.
@@ -572,7 +574,7 @@
                                     <div class="hidden_information">
                                         <div class="image">
                                             <img src="img/thumb4-3.jpg" alt="" />
-                                            <div class="main" data-img-url="img/blogs/2.jpg"></div>
+                                            <div class="main" data-img-url="img/portfolio/pm-folio02.jpg"></div>
                                         </div>
                                         <!-- <div class="description">
                                             <h3>Learn About Wireframes Before Hiring a Web Developer</h3>
@@ -741,8 +743,8 @@
                                     </div>
                                     <div class="hidden_information">
                                         <div class="image">
-                                            <img src="img/portfolio/paguitos-app-comisiones.png" alt="" />
-                                            <div class="main" data-img-url="img/portfolio/paguitos-app-comisiones.png"></div>
+                                            <img src="img/portfolio/pm-folio01.jpg" alt="" />
+                                            <div class="main" data-img-url="img/portfolio/pm-folio01.jpg"></div>
                                         </div>
                                         <div class="description">
                                             <h3>Objetivo general</h3>
