--- a/index.html
+++ b/index.html
@@ -419,12 +419,12 @@
                                     <div class="item">
                                         <div class="item_in">
                                             <div class="description">
-                                                <p>Excelente trabajo en equipo, se adapta y se trabaja cada detalle de acuerdo a las necesidades de la operacion</p>
+                                                <p>Excelente trabajo en equipo, se adapta y se trabaja cada detalle de acuerdo a las necesidades de la operación.</p>
                                             </div>
                                             <div class="title">
                                                 <span class="image" data-img-url="img/portfolio/macro-logo.png"></span>
                                                 <h3>Jessica Maria Xeque Barrera</h3>
-                                                <p>Coordinador de Compensaciones y Beneficios</p>
+                                                <p>Coordinador de Compensaciones y Beneficios.</p>
                                             </div>
                                         </div>
                                     </div>
