--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     <div class="container">
                         <div class="content_in">
                             <h3 class="title title-dekstop">UX <span>Lab</span> </h3>
-                            <div style="text-align: left;"><small>by MKT</small></div>
+                            <div style="text-align: left;"><small>Creado por MKT</small></div>
                             <h5 class="copy-hero">Evaluar los procesos de usabilidad, interacción y emociones del usuario.</h5>
                         </div>
                     </div>
