--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
                                 <div class="item modal_item" data-index="2">
                                     <div class="image">
                                         <img src="img/thumb63-43.jpg" alt="" />
-                                        <div class="overlay_image" data-img-url="img/portfolio/portafolio-macrop.jpg"></div>
+                                        <div class="overlay_image" data-img-url="img/portfolio/e-commerce-macropay.gif"></div>
                                     </div>
                                     <div class="overlay"></div>
                                     <div class="title_holder">
