--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     <div class="container">
                         <div class="content_in">
                             <h3 class="title title-dekstop">UX <span>Lab</span> </h3>
-                            <div style="text-align: left;"><small>Creado por MKT</small></div>
+                            <div style="text-align: left;"><small>Diseñado por Mercadotecnia</small></div>
                             <h5 class="copy-hero">Evaluar los procesos de usabilidad, interacción y emociones del usuario.</h5>
                         </div>
                     </div>
@@ -507,7 +507,7 @@
                                 <div class="item modal_item" data-index="1">
                                     <div class="image">
                                         <img src="img/thumb63-43.jpg" alt="" />
-                                        <div class="overlay_image" data-img-url="img/portfolio/sistema-diseno-pm.jpg"></div>
+                                        <div class="overlay_image" data-img-url="img/portfolio/sd/04-a.gif"></div>
                                     </div>
                                     <div class="overlay"></div>
                                     <div class="title_holder">
