--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
         <section id="xc-clientes">
             <div class="grid-container">
                 <div class="item-left">
-                    <h2 class="title">XC Data de experiencia al cliente</h2>
+                    <h2 class="title">CX Data de experiencia al cliente</h2>
                     <img src="img/datavoz-cliente.jpg" alt="Data de voz al cliente">
                     <small>Data de Voz al cliente</small>
                 </div>
