--- a/index.html
+++ b/index.html
@@ -770,7 +770,7 @@
         <footer class="edrea_footer">
             <div class="container">
                 <div class="content">
-                    <p>Hecho con 💙 por MKT Macropay / Julio C. Poxtan D. - Diseñador UX UI</p>
+                    <p>Hecho con 💙 por MKT <img src="Logotipo-Macropay" alt=""> / Julio C. Poxtan D. - Diseñador UX UI</p>
                 </div>
             </div>
         </footer>
