--- a/index.html
+++ b/index.html
@@ -63,14 +63,11 @@
                         </div>
                         <div class="menu">
                             <ul class="anchor_nav">
-                                <!-- <li class="current"><a href="#home">Home</a></li> -->
                                 <li><a href="#ventajas">Ventajas</a></li>
                                 <li><a href="#information">Funcionamiento</a></li>
                                 <li><a href="#testimonials">Testimonios</a></li>
                                 <li><a href="#organigrama">Organigrama UX</a></li>
                                 <li><a href="#proyectos">Proyectos</a></li>
-                                <!-- <li><a href="#news">Recursos</a></li> -->
-                                <!-- <li class="button"><a href="#contact">Contact</a></li>-->
                             </ul>
                             <span class="ccc"></span>
                         </div>
@@ -127,8 +124,8 @@
                     <div class="container">
                         <div class="content_in">
                             <h3 class="title title-dekstop">UX <span>Lab</span> </h3>
-                            <div style="text-align: left;"><small>Diseñado por Mercadotecnia</small></div>
-                            <h5 class="copy-hero">Evaluar los procesos de usabilidad, interacción y emociones del usuario.</h5>
+                            <div style="text-align: left;">El laboratorio de Productos Digitales</div>
+                            <h5 class="copy-hero">Evaluar la usabilidad, la interacción y las emociones del usuario.</h5>
                         </div>
                     </div>
                 </div>
