--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
             <div class="grid-container">
                 <div class="item-left">
                     <h2 class="title">Equipo centralizado de UX</h2>
-                    <img src="img/organigrama-ux.jpg" alt="Organigrama UX Lab">
+                    <img src="img/team-ux-ok.png" alt="Organigrama UX Lab">
                     <small>Organigrama UX team</small>
                 </div>
                 <div class="item-right">
