--- a/index.html
+++ b/index.html
@@ -469,8 +469,8 @@
             <div class="grid-container">
                 <div class="item-left">
                     <h2 class="title">Equipo centralizado de UX</h2>
-                    <img src="img/team-ux-ok.png" alt="Organigrama UX Lab">
-                    <small>Organigrama UX team</small>
+                    <img src="img/team-ux-ok.png" alt="Organigrama UX Lab" style="padding-top:5rem;">
+                    <!-- <small>Organigrama UX team</small> -->
                 </div>
                 <div class="item-right">
                     <ul class="list-grid-info">
