--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
         </section>
         <!-- /Information -->
         <!-- xc -->
-        <section id="xc-clientes">
+        <!-- <section id="xc-clientes">
             <div class="grid-container">
                 <div class="item-left">
                     <h2 class="title">CX Data de experiencia al cliente</h2>
@@ -360,7 +360,7 @@
                     </ul>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- xc -->
         <!-- Testimonials -->
         <section id="testimonials">
